<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bgMain"
    tools:context=".PotrdiSliko">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potrditev_lokacije"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lokacija1"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:background="@drawable/rounded">

                <ImageView
                    android:id="@+id/slikaPreview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/placeholder"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp"
                    android:contentDescription="@string/slika" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/lokacijaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/Napaka" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ponoviBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/ponovi" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"></Space>

                <Button
                    android:id="@+id/potrdiBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/potrdi" />

            </LinearLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>