<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lokacija1"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:padding="10dp"
    android:background="@drawable/rounded">

    <ImageView
        android:id="@+id/lokacija1Slika"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/lokacija_1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/fe" />

    <ImageView
        android:id="@+id/ikona_profila"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:contentDescription="@string/ikona_profila"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lokacija1Slika"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/profile_icon" />

    <TextView
        android:id="@+id/ime01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jaz"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ikona_profila"
        app:layout_constraintTop_toBottomOf="@+id/lokacija1Slika"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/lokacija_gumb"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:contentDescription="@string/ikona_ugibanja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toEndOf="@+id/ime01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/location2" />

</androidx.constraintlayout.widget.ConstraintLayout>
